Added compare by ID trace to output